# liuguang-card-generator-skill

./: .gitignore  CHANGELOG.md  CHARLII_EN_SPEC_PROD_v1.0.md  CHARLII_SPEC_EN_v1.0.md  CHARLII_SPEC_v1.0.md  DESIGN_SUMMARY_v1.2.md  GLOBAL_CONFIG_COMPLETE.md  OPTIMIZATION_GUIDE.md  README.md  SKILL.md  VERSION_1.2_SUMMARY.md  add_ip_footer.py  batch_generator.py  card_preprocessor.py  complete_cover.py  content_analyzer.py  cover_with_image.py  create_ai_cover.py  create_complete_cover.py  create_long_card.py  create_modern_cover.py  generator.py  helper.py  image_handler.py  overlay_blog_cover.py  overlay_blog_image.py  package.json  pyproject.toml  quality_checker.py  redesign_cover.py  requirements.txt  social_copy_generator.py  test_image_handling.py  test_v1.2.sh  translator.py
