[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liuguang-card-generator"
version = "1.4.0"
description = "Bilingual social media card generator (ZH/EN) with Charlii style"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.20.0",
    "requests>=2.28.0",
    "Pillow>=10.0.0",
]

[project.scripts]
liuguang-card-gen = "generator:main"

[project.urls]
Homepage = "https://github.com/kenchikuliu/liuguang-card-generator-skill"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "generator.py",
    "card_preprocessor.py",
    "translator.py",
    "social_copy_generator.py",
    "image_handler.py",
    "content_analyzer.py",
    "create_modern_cover.py",
    "requirements.txt",
    "README.md",
]
